# sv-filelist-parser

./: Cargo.toml  README.md
src/: lib.rs
testcase/: files.f
tests/: integration_tests.rs
