[package]
name = "sv-filelist-parser"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A library to parse a SystemVerilog Filelist and return a list of files, include directories and defines"
repository = "https://github.com/supleed2/sv-filelist-parser"
readme = "README.md"
categories = ["parser-implementations", "parsing", "development-tools"]
keywords = ["verilog", "systemverilog", "filelist"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0.0"